# BayesianImageRegistration

./: .gitignore  README.md  SparseInverse.cpp  index.html  params.json
BayesianImageRegistration/: CMakeLists.txt
src/: Main.cxx
